# PAPER_MP2RAGE_CS

./: README.md
docker/: Dockerfile  launch_docker.sh
gadgetron-gadgets-MP2RAGE/: CMakeLists.txt  README.md
gadgetron-gadgets-MP2RAGE/gadgets_MP2RAGE/: CMakeLists.txt  ExtractMP2RAGEGadget.cpp  ExtractMP2RAGEGadget.h
gadgetron-gadgets-MP2RAGE/gadgets_MP2RAGE/config/: MP2RAGE_CS_Bucket.xml  MP2RAGE_CS_Bucket_DUMP.xml
gadgetron-gadgets-MP2RAGE/gadgets_MP2RAGE/parameterMaps/: IceProgramGadgetron_3D_MP2RAGE_CS.ipr  IceProgramGadgetron_3D_MP2RAGE_CS.xml  IceProgramGadgetron_3D_MP2RAGE_CS_DUMP.xml  IsmrmrdParameterMap_Siemens_MP2RAGE.xml  IsmrmrdParameterMap_Siemens_MP2RAGE.xsl  IsmrmrdParameterMap_Siemens_MP2RAGE_CV.xsl
gadgetron-matlab-MP2RAGE/+gadgetron/+custom/: README.md
gadgetron-matlab-MP2RAGE/+gadgetron/+custom/+MP2RAGE_CS/: MP2RAGE_LookUpTable.m  handle_connection_MP2RAGE_CS_allCase.m
gadgetron-matlab-MP2RAGE/+gadgetron/+custom/+utils/: correct_image_siemens.m
